--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailFragment"
-    android:clickable="true">
+    android:clickable="true"
+    android:background="#F5DEB3">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -85,7 +86,7 @@
             android:id="@+id/thumbnail"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:src="@android:drawable/ic_menu_camera"
             app:layout_constraintTop_toBottomOf="@id/name"
             app:layout_constraintRight_toRightOf="parent"
