--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapActivity">
+    tools:context=".View.MapActivity">
 
     <FrameLayout
         android:id="@+id/selector"
@@ -42,7 +42,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MapActivity">
+            tools:context=".View.MapActivity">
 
                 <Button
                     android:id="@+id/endTurn"
