--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".View.MainActivity">
 
     <TextView
         android:id="@+id/gameTitle"
@@ -21,7 +21,7 @@
         android:id="@+id/authorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="By Kei Wang - sID: 19126089"
+        android:text="By Kei Wang - 19126089"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/gameTitle"
         app:layout_constraintLeft_toLeftOf="parent"
